// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should contain a proper content 1`] = `
<cert-card__field-val
  data={
    Array [
      "a",
      "b",
    ]
  }
  type="list"
>
  <span
    className="cert-card__field-val cert-card__field-val_type_list"
    data-lego="react"
    style={Object {}}
  >
    a, b
  </span>
</cert-card__field-val>
`;

exports[`should print a hyphen in case of empty list 1`] = `
<cert-card__field-val
  data={Array []}
  type="list"
>
  <span
    className="cert-card__field-val cert-card__field-val_type_list"
    data-lego="react"
    style={Object {}}
  >
    —
  </span>
</cert-card__field-val>
`;
